Prueba de Push 2

--- a/plantilla.html
+++ b/plantilla.html
@@ -19,8 +19,8 @@
             <a th:href="@{/}" class="navbar-brand fa-solid fa-burger fa-3x" style="color: #000000; margin-right: 8px"></a>
 
             <a th:href="@{/}" class="navbar-brand" style="font-family:fantasy; font-size: 48px;">
-                <span style="color: white;">[[#{aplicacion.pa}]]</span>
-                <span style="color: black;">[[#{aplicacion.monchar}]]</span>
+                <span style="color: white;">Aplicacion Restrurante Nombre</span>
+                <span style="color: black;">Aplicacion Restaurante</span>
             </a>
             <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" style="margin-left: 500px;">
                 <span class="navbar-toggler-icon"></span>
