--- a/plantilla.html
+++ b/plantilla.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6"
       xmlns:th="http://www.thymeleaf.org">
+      //////Hola
     <head th:fragment="head">
         <title>PaMonchar</title>
         <meta charset="UTF-8"/>
