--- a/plantilla.html
+++ b/plantilla.html
@@ -58,9 +58,7 @@
                                 </a>
                             </li>
                         </ul>
-
-
-
+// PRUEBA JALI 
                         <!-- 6 UL links de categoria,productos,usuarios,carrusel,card-->
                         <ul class="navbar-nav " sec:authorize="hasRole('ROLE_VENDEDOR')">
                             <li class="nav-item dropdown" style="font-family:fantasy; font-size: 24px; color: #000000;" sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_VENDEDOR')">
