--- a/plantilla.html
+++ b/plantilla.html
@@ -15,6 +15,7 @@
         <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
     </head>
     <body class="bg-secondary">
+        ///help
         <!-- 1 Fragmento tabla de navegacion -->
         <header class="header" style="background: linear-gradient(to right, #fdba14, #df531e); height: 110px; display: flex; justify-content: center; align-items: center;">
             <a th:href="@{/}" class="navbar-brand fa-solid fa-burger fa-3x" style="color: #000000; margin-right: 8px"></a>
