--- a/plantilla.html
+++ b/plantilla.html
@@ -1,25 +1,22 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6"
-      xmlns:th="http://www.thymeleaf.org">
-    <head th:fragment="head">
+<html xmlns="http://www.w3.org/1999/xhtml">
+    <head>
         <title>PaMonchar</title>
         <meta charset="UTF-8"/>
-        <link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet"/>
-        <link th:href="@{/webjars/font-awesome/css/all.css}" rel="stylesheet"/>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"/>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet"/>
         <script src="/js/rutinas.js" type="text/javascript"></script>
-        <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
-        <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
-        <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
     </head>
     <body class="bg-secondary">
-        <!-- 1 Fragmento tabla de navegacion -->
+        <!-- 1 Fragmento tabla de navegación -->
         <header class="header" style="background: linear-gradient(to right, #fdba14, #df531e); height: 110px; display: flex; justify-content: center; align-items: center;">
-            <a th:href="@{/}" class="navbar-brand fa-solid fa-burger fa-3x" style="color: #000000; margin-right: 8px"></a>
+            <a href="/" class="navbar-brand fa-solid fa-burger fa-3x" style="color: #000000; margin-right: 8px"></a>
 
-            <a th:href="@{/}" class="navbar-brand" style="font-family:fantasy; font-size: 48px;">
-                <span style="color: white;">Aplicacion Restrurante Nombre</span>
+            <a href="/" class="navbar-brand" style="font-family:fantasy; font-size: 48px;">
+                <span style="color: white;">Aplicacion Restaurante Nombre</span>
                 <span style="color: black;">Aplicacion Restaurante</span>
             </a>
             <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" style="margin-left: 500px;">
@@ -27,75 +24,73 @@
             </button>
             <nav class="navbar navbar-expand-sm navbar-bs-warning">
                 <div class="container">
-
-                    <!-- 2 Fragmento links de navegaion-->
+                    <!-- 2 Fragmento links de navegación -->
                     <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-
-                        <!-- 3 UL link carrito-->
+                        <!-- 3 UL link carrito -->
                         <div id="resultsBlock"> 
                         </div>
 
-                        <!-- 4 UL link de menu-->
+                        <!-- 4 UL link de menú -->
                         <ul class="navbar-nav">
                             <li class="nav-item px-2" style="font-family:fantasy; font-size: 24px;">
-                                <a class="nav-link" th:href="@{/pruebas/listado2}" 
+                                <a class="nav-link" href="/pruebas/listado2" 
                                    style="color: #000000;"
                                    onmouseover="this.style.color = '#ffffff ';" 
                                    onmouseout="this.style.color = '#000000';">
-                                    <i class="fas fa-utensils"></i> [[#{plantilla.menu}]]
+                                    <i class="fas fa-utensils"></i> Menú
                                 </a>
                             </li>
                         </ul>
 
-                        <!-- 5 UL link de ordenar ya-->
+                        <!-- 5 UL link de ordenar ya -->
                         <ul class="navbar-nav">
                             <li class="nav-item px-2" style="font-family:fantasy; font-size: 24px;">
-                                <a class="nav-link" th:href="@{/pruebas/listado}" 
+                                <a class="nav-link" href="/pruebas/listado" 
                                    style="color: #000000;"
                                    onmouseover="this.style.color = '#ffffff ';" 
                                    onmouseout="this.style.color = '#000000';">
-                                    <i class="fas fa-concierge-bell"></i> [[#{plantilla.ordenaya}]]
+                                    <i class="fas fa-concierge-bell"></i> Ordenar Ya
                                 </a>
                             </li>
                         </ul>
-                        //SEGUNDA PRUEBA YAILYN
-                        <!-- 6 UL links de categoria,productos,usuarios,carrusel,card-->
-                        <ul class="navbar-nav " sec:authorize="hasRole('ROLE_VENDEDOR')">
-                            <li class="nav-item dropdown" style="font-family:fantasy; font-size: 24px; color: #000000;" sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_VENDEDOR')">
+
+                        <!-- 6 UL links de categoría, productos, usuarios, carrusel, card -->
+                        <ul class="navbar-nav">
+                            <li class="nav-item dropdown" style="font-family:fantasy; font-size: 24px; color: #000000;">
                                 <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false"
                                    style="color: #000000;"
                                    onmouseover="this.style.color = '#ffffff ';" 
-                                   onmouseout="this.style.color = '#000000';">[[#{plantilla.promociones}]]</a>                                                        
+                                   onmouseout="this.style.color = '#000000';">Promociones</a>                                                        
                                 <ul class="dropdown-menu dropdown-menu-dark" style="background-color: #000000;">
-                                    <li><a class="dropdown-item" th:href="@{/categoria/listado}">[[#{plantilla.categorias}]]</a></li>
-                                    <li><a class="dropdown-item" th:href="@{/producto/listado}">[[#{plantilla.productos}]]</a></li>
-                                    <li><a class="dropdown-item" th:href="@{/usuario/listado}">[[#{plantilla.usuarios}]]</a></li>
-                                    <li><a class="dropdown-item" th:href="@{/carrusel/listado}">[[#{plantilla.carrusel}]]</a></li>
-                                    <li><a class="dropdown-item" th:href="@{/card/listado}">[[#{plantilla.card}]]</a></li>
+                                    <li><a class="dropdown-item" href="/categoria/listado">Categorías</a></li>
+                                    <li><a class="dropdown-item" href="/producto/listado">Productos</a></li>
+                                    <li><a class="dropdown-item" href="/usuario/listado">Usuarios</a></li>
+                                    <li><a class="dropdown-item" href="/carrusel/listado">Carrusel</a></li>
+                                    <li><a class="dropdown-item" href="/card/listado">Card</a></li>
                                 </ul>
                             </li>
                         </ul>
 
-                        <!-- 7 UL link de idiomas-->
+                        <!-- 7 UL link de idiomas -->
                         <ul class="navbar-nav">
-                            <li class="nav-item dropdown" style="font-family:fantasy ;font-size: 24px; color: #000000;">
+                            <li class="nav-item dropdown" style="font-family:fantasy; font-size: 24px; color: #000000;">
                                 <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false" 
                                    style="color: #000000;"
                                    onmouseover="this.style.color = '#ffffff ';" 
                                    onmouseout="this.style.color = '#000000';">
-                                    [[#{plantilla.idioma}]]</a>
+                                    Idioma</a>
                                 <ul class="dropdown-menu dropdown-menu-dark" style="background-color: #000000;">
-                                    <li><a class="dropdown-item"  th:href="@{/(lang=es)}">ES</a></li>
-                                    <li><a class="dropdown-item" th:href="@{/(lang=en)}">EN</a></li>
+                                    <li><a class="dropdown-item" href="?lang=es">ES</a></li>
+                                    <li><a class="dropdown-item" href="?lang=en">EN</a></li>
                                 </ul>
                             </li>
                         </ul>
-                        <!-- 8 UL link inicio de sesion-->
-                        <ul class ="navbar-nav"
-                            sec:authorize="!isAuthenticated()"> 
+
+                        <!-- 8 UL link inicio de sesión -->
+                        <ul class="navbar-nav"> 
                             <li class="nav-item my-auto text-white">
                                 <a class="nav-menu-link nav-link"
-                                   th:href="@{/login}"
+                                   href="/login"
                                    style="color: #000000;"
                                    onmouseover="this.style.color = '#ffffff ';" 
                                    onmouseout="this.style.color = '#000000';">
@@ -103,34 +98,32 @@
                                 </a>
                             </li>
                         </ul>
+
                         <!-- 9 UL imagen usuario -->
-                        <ul class="navbar-nav" sec:authorize="isAuthenticated()"> 
+                        <ul class="navbar-nav"> 
                             <li class="nav-item my-auto text-white d-flex flex-column align-items-center">
-                                <img th:src="@{${session.imagenUsuario}}" 
-                                     src="tu-imagen.jpg" 
+                                <img src="tu-imagen.jpg" 
                                      class="img-fluid rounded-circle" 
                                      style="width: 45px; height: 45px; margin: 0 7px"  
                                      alt="Perfil">
-
                             </li>
                             <li class="nav-item my-auto text-black mt-1" style="margin: 0 5px;"> 
-                                <form method="post" th:action="@{/logout}">
+                                <form method="post" action="/logout">
                                     <button class="btn"   
                                             style="color: #000000;"
                                             onmouseover="this.style.color = '#ffffff ';" 
                                             onmouseout="this.style.color = '#000000';">
-                                        <i class="fas fa-right-from-bracket" style=" font-size: 1.5em;"></i> 
+                                        <i class="fas fa-right-from-bracket" style="font-size: 1.5em;"></i> 
                                     </button>  
                                 </form>
                             </li>
                         </ul>
-
                     </div>
                 </div>
             </nav>
         </header>
         <!-- 10 footer -->
-        <footer th:fragment="footer" class="bg-dark text-white p-2 text-center" style="margin-top: 52px">
+        <footer class="bg-dark text-white p-2 text-center" style="margin-top: 52px">
             <h2>Contáctanos</h2>
             <h4>+506 8745 2819</h4>
             <div style="margin: 10px 0;">
@@ -139,9 +132,7 @@
                 <i class="fa-brands fa-x-twitter fa-xl" style="color: #ffffff; margin: 0 10px;"></i>
                 <i class="fa-brands fa-whatsapp fa-xl" style="color: #28e901; margin: 0 10px;"></i>
             </div>
-            <p style="margin-top: 8px">©[[#{plantilla.derechos}]]</p>
+            <p style="margin-top: 8px">© Derechos reservados</p>
         </footer>
     </body>
-
 </html>
-
