--- a/index.html
+++ b/index.html
@@ -97,15 +97,15 @@
 
     <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="..." class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="...">
-          </div>
+            <div class="carousel-item active">
+                <img src="https://th.bing.com/th/id/OIP.gdn8D0XxBBFdsFHOQkDVUwHaEK?rs=1&pid=ImgDetMain" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="https://th.bing.com/th/id/OIP.6TvVRouyDxliUU-rS4Us3QHaFE?rs=1&pid=ImgDetMain" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="https://images8.alphacoders.com/103/1032061.jpg"class="d-block w-100" alt="...">
+              </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
