--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         <nav class="navbar navbar-expand-lg py-3" style="background: linear-gradient(to right, #fdba14, #df531e); height: 110px; display: flex; justify-content: center; align-items: center;">
             <div class="container px-5" style="font-family:fantasy">
-                <a class="navbar-brand" href="index.html"><span class="fw-bolder " style="color: #000000;">La ruta del
+                <a class="navbar-brand" href="./index.html"><span class="fw-bolder " style="color: #000000; font-size: 24px;">La ruta del
                         sabor</span></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -51,19 +51,19 @@
                             </a>
                         </li>
                         <li class="nav-item px-2" style="font-family:fantasy; font-size: 24px;">
-                            <a class="nav-link" href="/pruebas/listado" 
+                            <a class="nav-link" href="./sucursal.html" 
                                style="color: #000000;"
                                onmouseover="this.style.color = '#ffffff ';" 
                                onmouseout="this.style.color = '#000000';">
-                                <i class="fas fa-concierge-bell"></i> Ordenar Ya
+                                <i class="fas fa-concierge-bell"></i> Reservaciones
                             </a>
                         </li>
                         <li class="nav-item px-2" style="font-family:fantasy; font-size: 24px;">
-                            <a class="nav-link" href="/pruebas/listado" 
+                            <a class="nav-link" href="./sucursal.html" 
                                style="color: #000000;"
                                onmouseover="this.style.color = '#ffffff ';" 
                                onmouseout="this.style.color = '#000000';">
-                                <i class="fas fa-concierge-bell"></i> Sucursales
+                               <i class="fa-solid fa-location-dot"></i> Sucursales
                             </a>
                         </li>
 
@@ -98,13 +98,13 @@
     <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="https://th.bing.com/th/id/OIP.gdn8D0XxBBFdsFHOQkDVUwHaEK?rs=1&pid=ImgDetMain" class="d-block w-100" alt="...">
+                <img src="https://th.bing.com/th/id/OIP.gdn8D0XxBBFdsFHOQkDVUwHaEK?rs=1&pid=ImgDetMain" class=".imagenCarrusel" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="https://th.bing.com/th/id/OIP.6TvVRouyDxliUU-rS4Us3QHaFE?rs=1&pid=ImgDetMain" class="d-block w-100" alt="...">
+                <img src="https://th.bing.com/th/id/OIP.6TvVRouyDxliUU-rS4Us3QHaFE?rs=1&pid=ImgDetMain" class=".imagenCarrusel" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="https://images8.alphacoders.com/103/1032061.jpg"class="d-block w-100" alt="...">
+                <img src="https://images8.alphacoders.com/103/1032061.jpg"class=".imagenCarrusel" alt="...">
               </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
