--- a/sucursal.html
+++ b/sucursal.html
@@ -32,10 +32,9 @@
     <!-- 1 Fragmento tabla de navegación -->
     <main class="flex-shrink-0">
 
-        <nav class="navbar navbar-expand-lg py-3"
-            style="background: linear-gradient(to right, #fdba14, #df531e); height: 110px; display: flex; justify-content: center; align-items: center;">
+        <nav class="navbar navbar-expand-lg py-3" style="background: linear-gradient(to right, #fdba14, #df531e); height: 110px; display: flex; justify-content: center; align-items: center;">
             <div class="container px-5" style="font-family:fantasy">
-                <a class="navbar-brand" href="index.html"><span class="fw-bolder " style="color: #000000;">La ruta del
+                <a class="navbar-brand" href="./index.html"><span class="fw-bolder " style="color: #000000; font-size: 24px;">La ruta del
                         sabor</span></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -44,38 +43,48 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
                         <li class="nav-item px-2" style="font-family:fantasy; font-size: 24px;">
-                            <a class="nav-link" href="/pruebas/listado2" style="color: #000000;"
-                                onmouseover="this.style.color = '#ffffff ';" onmouseout="this.style.color = '#000000';">
+                            <a class="nav-link" href="/pruebas/listado2" 
+                               style="color: #000000;"
+                               onmouseover="this.style.color = '#ffffff ';" 
+                               onmouseout="this.style.color = '#000000';">
                                 <i class="fas fa-utensils"></i> Menú
                             </a>
                         </li>
                         <li class="nav-item px-2" style="font-family:fantasy; font-size: 24px;">
-                            <a class="nav-link" href="/pruebas/listado" style="color: #000000;"
-                                onmouseover="this.style.color = '#ffffff ';" onmouseout="this.style.color = '#000000';">
-                                <i class="fas fa-concierge-bell"></i> Ordenar Ya
+                            <a class="nav-link" href="./sucursal.html" 
+                               style="color: #000000;"
+                               onmouseover="this.style.color = '#ffffff ';" 
+                               onmouseout="this.style.color = '#000000';">
+                                <i class="fas fa-concierge-bell"></i> Reservaciones
                             </a>
                         </li>
                         <li class="nav-item px-2" style="font-family:fantasy; font-size: 24px;">
-                            <a class="nav-link" href="/pruebas/listado" style="color: #000000;"
-                                onmouseover="this.style.color = '#ffffff ';" onmouseout="this.style.color = '#000000';">
-                                <i class="fas fa-concierge-bell"></i> Sucursales
+                            <a class="nav-link" href="./sucursal.html" 
+                               style="color: #000000;"
+                               onmouseover="this.style.color = '#ffffff ';" 
+                               onmouseout="this.style.color = '#000000';">
+                               <i class="fa-solid fa-location-dot"></i> Sucursales
                             </a>
                         </li>
 
                         <li class="nav-item my-auto text-white">
-                            <a class="nav-menu-link nav-link" href="/login" style="color: #000000;"
-                                onmouseover="this.style.color = '#ffffff ';" onmouseout="this.style.color = '#000000';">
+                            <a class="nav-menu-link nav-link"
+                               href="/login"
+                               style="color: #000000;"
+                               onmouseover="this.style.color = '#ffffff ';" 
+                               onmouseout="this.style.color = '#000000';">
                                 <i class="fa fa-user-alt" style="font-size: 1.5em;"></i>
                             </a>
                         </li>
-                        <ul class="navbar-nav">
-                            <li class="nav-item my-auto text-black mt-1" style="margin: 0 5px;">
+                        <ul class="navbar-nav">     
+                            <li class="nav-item my-auto text-black mt-1" style="margin: 0 5px;"> 
                                 <form method="post" action="/logout">
-                                    <button class="btn" style="color: #000000;"
-                                        onmouseover="this.style.color = '#ffffff ';"
-                                        onmouseout="this.style.color = '#000000';">
-                                        <i class="fas fa-right-from-bracket" style="font-size: 1.5em;"></i>
-                                    </button>
+                                    <button class="btn"   
+                                            style="color: #000000;"
+                                            onmouseover="this.style.color = '#ffffff ';" 
+                                            onmouseout="this.style.color = '#000000';">
+                                        <i class="fas fa-right-from-bracket" style="font-size: 1.5em;"></i> 
+                                    </button>  
                                 </form>
                             </li>
                         </ul>
@@ -86,13 +95,34 @@
 
     </main>
 
-    <h1>Sucursal San Jose</h1>
-    <div class="google-map">
+    <br>
+    <div class="map-container">
+        <h1>Sucursal San Jose</h1>
+        <hr>
+        <!-- Insertar aquí la URL de Google Maps de la ubicación deseada -->
         <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2990.274257380938!2d-70.56068388481569!3d41.45496659976631!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e52963ac45bbcb%3A0xf05e8d125e82af10!2sDos%20Mas!5e0!3m2!1sen!2sus!4v1671220374408!5m2!1sen!2sus"
+            src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1964.9742569543535!2d-84.0807422621453!3d9.93824204792348!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2scr!4v1731909819185!5m2!1ses-419!2scr"
             width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe>
+            referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
+        <hr>
+        <p>Av.5, Calle 6, local #4</p>
     </div>
+
+    <br>
+    <div class="map-container">
+        <h1>Sucursal Heredia</h1>
+        <hr>
+        <!-- Insertar aquí la URL de Google Maps de la ubicación deseada -->
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1225.770390257465!2d-84.11910046078125!3d9.998363737968841!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2scr!4v1731909983783!5m2!1ses-419!2scr"
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
+        <hr>
+        <p>Av. William H. Taft, Calle 4, local #3</p>
+    </div>
+
     <!-- 10 footer -->
     <footer class="bg-dark text-white p-2 text-center" style="margin-top: 52px">
         <h2>Contáctanos</h2>
