MENU Y ORDENAR YA

--- a/index.html
+++ b/index.html
@@ -43,13 +43,23 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
                         <li class="nav-item px-2" style="font-family:fantasy; font-size: 24px;">
-                            <a class="nav-link" href="/pruebas/listado2" 
+                            <a class="nav-link" href="./menu.html" 
                                style="color: #000000;"
                                onmouseover="this.style.color = '#ffffff ';" 
                                onmouseout="this.style.color = '#000000';">
                                 <i class="fas fa-utensils"></i> Menú
                             </a>
                         </li>
+                        
+                        <li class="nav-item px-2" style="font-family:fantasy; font-size: 24px;">
+                            <a class="nav-link" href="./ordenar.html" 
+                               style="color: #000000;"
+                               onmouseover="this.style.color = '#ffffff ';" 
+                               onmouseout="this.style.color = '#000000';">
+                                <i class="fas fa-concierge-bell"></i> Ordenar Ya
+                            </a>
+                        </li>
+                        
                         <li class="nav-item px-2" style="font-family:fantasy; font-size: 24px;">
                             <a class="nav-link" href="./sucursal.html" 
                                style="color: #000000;"
